minor tweaks to show logo when responsive CSS is active and then scroll away_con'td

--- a/public/index.html
+++ b/public/index.html
@@ -131,87 +131,7 @@
             	<!-- SLIDE 1 -->
 				<li data-transition="fade" data-slotamount="7" data-masterspeed="900" >
 
-					<img src="images/sliders/1image.jpg" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
-
-					<div class="tp-caption customout sfr"
-						data-x="right" data-hoffset="0"
-						data-y="0"
-                        data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
-						data-speed="800"
-						data-start="900"
-						data-easing="Power4.easeOut"
-						data-endspeed="500"
-						data-endeasing="Power1.easeIn"
-						data-captionhidden="on"
-						style="z-index: 3"><img src="images/sliders/image11.png" alt="">
-					</div>
-
-					<div class="tp-caption mediumlarge_light_white skewfromleft customout"
-						data-x="0"
-						data-y="85"
-						data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
-						data-speed="800"
-						data-start="1300"
-						data-easing="Power4.easeOut"
-						data-endspeed="300"
-						data-endeasing="Power1.easeIn"
-						data-captionhidden="on"
-						style="z-index: 6; font-size: 40px !important;">
-                        <!--Address Concern For-->
-					</div>
-
-					<div class="tp-caption large_bold_white customin ltl"
-						data-x="0"
-						data-y="180"
-						data-customin="x:0;y:0;z:0;rotationX:90;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:0;transformPerspective:200;transformOrigin:50% 0%;"
-						data-speed="1000"
-						data-start="1600"
-						data-easing="Back.easeInOut"
-						data-endspeed="400"
-						data-endeasing="Back.easeIn"
-						style="z-index: 14">
-                        <!--<strong> &nbsp;&nbsp;Product</strong>-->
-					</div>
-
-					<div class="tp-caption large_bold_white skewfromrightshort customout"
-						data-x="0"
-						data-y="280"
-						data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
-						data-speed="500"
-						data-start="2200"
-						data-easing="Power4.easeOut"
-						data-endspeed="500"
-						data-endeasing="Power4.easeIn"
-						data-captionhidden="on"
-						style="z-index: 2">
-                        <!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong> Safety</strong>-->
-					</div>
-
-
-					<div class="tp-caption lightgrey_divider skewfromrightshort customout"
-						data-x="0"
-						data-y="450"
-						data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
-						data-speed="500"
-						data-start="3200"
-						data-easing="Power4.easeOut"
-						data-endspeed="500"
-						data-endeasing="Power4.easeIn"
-						data-captionhidden="on"
-						style="z-index: 2">
-					</div>
-
-					<div class="tp-caption customin ltl"
-						data-x="0"
-						data-y="480"
-						data-customin="x:0;y:0;z:0;rotationX:90;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:0;transformPerspective:200;transformOrigin:50% 0%;"
-						data-speed="1000"
-						data-start="3000"
-						data-easing="Back.easeInOut"
-						data-endspeed="400"
-						data-endeasing="Back.easeIn"
-                        style="z-index: 2">
-					</div>
+					<img src="images/sliders/1image.jpg" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat" style="" />
 
 				</li>
 
@@ -220,32 +140,6 @@
 
                     <img src="images/sliders/2image.jpg" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
 
-                    <div class="tp-caption mediumlarge_light_white skewfromleft customout"
-                         data-x="10"
-                         data-y="70"
-                         data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
-                         data-speed="800"
-                         data-start="1000"
-                         data-easing="Power4.easeOut"
-                         data-endspeed="300"
-                         data-endeasing="Power1.easeIn"
-                         data-captionhidden="on"
-                         style="z-index: 6; font-size: 50px !important;">
-                        <!--Deliver-->
-                    </div>
-
-                    <div class="tp-caption large_bold_white customin ltl"
-                         data-x="0"
-                         data-y="150"
-                         data-customin="x:0;y:0;z:0;rotationX:90;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:0;transformPerspective:200;transformOrigin:50% 0%;"
-                         data-speed="1000"
-                         data-start="1600"
-                         data-easing="Back.easeInOut"
-                         data-endspeed="400"
-                         data-endeasing="Back.easeIn"
-                         style="z-index: 14; font-size: 38px !important;">
-                        <!--<strong>&nbsp;Product Information & <br/> &nbsp;Promotion </strong>-->
-                    </div>
                 </li>
 
 
@@ -253,49 +147,6 @@
                 <li data-transition="zoomout" data-slotamount="7" data-masterspeed="900" >
 
                     <img src="images/sliders/3image.jpg" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
-
-                    <div class="tp-caption mediumlarge_light_white skewfromleft customout"
-                         data-x="right"
-                         data-y="30"
-                         data-customin="x:50;y:150;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.5;scaleY:0.5;skewX:0;skewY:0;opacity:0;transformPerspective:0;transformOrigin:50% 50%;"
-                         data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
-                         data-speed="800"
-                         data-start="1300"
-                         data-easing="Power4.easeOut"
-                         data-endspeed="500"
-                         data-endeasing="Power4.easeIn"
-                         style="z-index: 6; font-size: 44px !important;">
-                        <!--Establish Direct-->
-                    </div>
-
-
-
-                    <div class="tp-caption large_bold_white customin ltl"
-                         data-x="right"
-                         data-y="130"
-                         data-customin="x:0;y:0;z:0;rotationX:90;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:0;transformPerspective:200;transformOrigin:50% 0%;"
-                         data-speed="1000"
-                         data-start="1600"
-                         data-easing="Back.easeInOut"
-                         data-endspeed="400"
-                         data-endeasing="Back.easeIn"
-                         style="z-index: 14; font-size: 50px !important;">
-                        <!--<strong> &nbsp;&nbsp;Brand-Consumer </strong>-->
-                    </div>
-
-                    <div class="tp-caption large_bold_white skewfromrightshort customout"
-                         data-x="right"
-                         data-y="230"
-                         data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
-                         data-speed="500"
-                         data-start="2200"
-                         data-easing="Power4.easeOut"
-                         data-endspeed="500"
-                         data-endeasing="Power4.easeIn"
-                         data-captionhidden="on"
-                         style="z-index: 2; font-size: 50px !important;">
-                        <!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong> Interactions</strong>-->
-                    </div>
 
                 </li>
 
